@@ -195,8 +195,9 @@ IN DEVELOPMENT
     * ``bzrlib.pack.make_readv_reader`` allows readv based access to pack
       files that are stored on a transport. (Robert Collins)
 
-    * ``Repository`` objects can now be compared with ``==`` and ``!=`` to
-      determine if they are the same repository.  (Andrew Bennetts)
+    * New ``Repository.is_same_repository`` method that reports if two
+      repository objects refer to the same repository (although with some risk
+      of false negatives).  (Andrew Bennetts)
 
   TESTING:
 
